--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "humps",
+  "name": "@wenwu/humps",
   "version": "2.0.2",
   "description": "Underscore-to-camelCase converter (and vice versa) for strings and object keys in JavaScript.",
   "main": "humps.js",
